--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "com.unity.ide.rider",
   "displayName": "Rider Editor",
   "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "unity": "2019.2",
   "unityRelease": "0a12",
-  "dependencies": {},
+  "dependencies": {
+    "com.unity.ext.nunit": "1.0.0"
+  },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "1.0.4"
+    "com.unity.ide.rider.tests": "1.0.5"
   },
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "3e2dcb22a6ba74872828d601e53829f29df05ac6"
+    "revision": "49ead695a2d979f8286dd52b5940b409b7d34536"
   }
 }
