--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "com.unity.ide.rider",
   "displayName": "Rider Editor",
   "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "1.1.0",
-  "unity": "2019.2",
+  "version": "1.1.2-preview",
+  "unity": "2019.3",
   "unityRelease": "0a12",
   "dependencies": {
-    "com.unity.ext.nunit": "1.0.0"
-  },
-  "relatedPackages": {
-    "com.unity.ide.rider.tests": "1.1.0"
+    "com.unity.test-framework": "1.1.2"
   },
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "80ad81f593b04a6104771ae0d01cc71773d07b02"
+    "revision": "ae4cd308ec91ba69f0d07c1f9408367b65110366"
   }
 }
