--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "com.unity.ide.rider",
   "displayName": "Rider Editor",
   "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "1.1.2-preview.2",
+  "version": "1.1.3-preview.1",
   "unity": "2019.2",
   "unityRelease": "0a12",
   "dependencies": {
-    "com.unity.test-framework": "1.1.2"
+    "com.unity.test-framework": "1.1.1"
+  },
+  "relatedPackages": {
+    "com.unity.ide.rider.tests": "1.1.3-preview.1"
   },
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "514c9b44ad3a6c47f72512966e5d15eab813cff1"
+    "revision": "a82f4f6f8f7e9744d8eebfd35e5b1d0055fdf704"
   }
 }
