--- a/Rider/Editor/com.unity.ide.rider.asmdef
+++ b/Rider/Editor/com.unity.ide.rider.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Unity.Rider.Editor",
     "references": [
-        "GUID:0acc523941302664db1f4e527237feb3"
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a"
     ],
     "includePlatforms": [
         "Editor"
