--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "com.unity.ide.rider",
   "displayName": "Rider Editor",
   "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "1.1.3-preview.1",
+  "version": "1.1.4",
   "unity": "2019.2",
   "unityRelease": "0a12",
   "dependencies": {
     "com.unity.test-framework": "1.1.1"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "1.1.3-preview.1"
+    "com.unity.ide.rider.tests": "1.1.4"
   },
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "a82f4f6f8f7e9744d8eebfd35e5b1d0055fdf704"
+    "revision": "d2ef95989104a4ce866cdcb7f94cf3c67476fcc9"
   }
 }
