--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "com.unity.ide.rider",
   "displayName": "Rider Editor",
   "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "1.1.4",
+  "version": "1.2.0-preview",
   "unity": "2019.2",
   "unityRelease": "0a12",
   "dependencies": {
     "com.unity.test-framework": "1.1.1"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "1.1.4"
+    "com.unity.ide.rider.tests": "1.2.0-preview"
   },
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "d2ef95989104a4ce866cdcb7f94cf3c67476fcc9"
+    "revision": "d04bff0fcd2cb7bcc9d333a77b48ad5670d11c4c"
   }
 }
