com.unity.ide.rider@2.0.1 ## [2.0.1] - 2020-03-05
Speed improvements,
ProjectTypeGuids for unity-generated project
Improve UI for Project Generation settings
Changes in csc.rsp would cause project-generation
Remove NoWarn 0169 from generated csproj
Support custom JetBrains Toolbox installation location

--- a/Rider/Editor/com.unity.ide.rider.asmdef
+++ b/Rider/Editor/com.unity.ide.rider.asmdef
@@ -9,8 +9,10 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [
@@ -19,5 +21,6 @@
             "expression": "1.1.1",
             "define": "TEST_FRAMEWORK"
         }
-    ]
+    ],
+    "noEngineReferences": false
 }
