--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "com.unity.ide.rider",
-  "displayName": "Rider Editor",
-  "description": "Code editor integration for supporting Rider as code editor for unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
-  "version": "2.0.0-preview",
+  "displayName": "JetBrains Rider Editor",
+  "description": "Code editor integration for supporting JetBrains Rider as code editor for Unity. Adds support for generating csproj files for code completion, auto discovery of installations, etc.",
+  "version": "2.0.1",
   "unity": "2019.2",
-  "unityRelease": "0a12",
+  "unityRelease": "6f1",
   "dependencies": {
     "com.unity.test-framework": "1.1.1"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "2.0.0-preview"
+    "com.unity.ide.rider.tests": "2.0.1"
   },
   "repository": {
+    "footprint": "b0e7e9bcb5a6078f8a1dd3e8dff385f0c4c7ecbb",
     "type": "git",
-    "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "f326d3a6fee568ed3ced37ff8abd74b581142758"
+    "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
+    "revision": "25944042063a8afd5955e6a7efd8e8c6e5ecb052"
   }
 }
