--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "com.unity.ide.rider",
   "displayName": "JetBrains Rider Editor",
   "description": "The JetBrains Rider Editor package provides an integration for using the JetBrains Rider IDE as a code editor for Unity. It adds support for generating .csproj files for code completion and auto-discovery of installations.",
-  "version": "3.0.5",
+  "version": "3.0.6",
   "unity": "2019.2",
   "unityRelease": "6f1",
+  "dependencies": {
+    "com.unity.ext.nunit": "1.0.6"
+  },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "3.0.5"
+    "com.unity.ide.rider.tests": "3.0.6"
   },
   "upmCi": {
-    "footprint": "35618136c327c78bd2f7104cf29791def0eae511"
+    "footprint": "2ae3fdf63a5d6c16bc62ceb0bb8980fe330ced80"
   },
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
     "type": "git",
-    "revision": "c84d2b08574326cd1e40dcae5378c556c6aecad8"
+    "revision": "0be4afe0ac726df5939a6ce50f8b7575968c5d6f"
   }
 }
