--- a/Rider/Editor/com.unity.ide.rider.asmdef
+++ b/Rider/Editor/com.unity.ide.rider.asmdef
@@ -21,6 +21,21 @@
             "name": "com.unity.test-framework",
             "expression": "1.1.1",
             "define": "TEST_FRAMEWORK"
+        },
+        {
+            "name": "Unity",
+            "expression": "2021.2.0a9",
+            "define": "ROSLYN_ANALYZER_FIX"
+        },
+        {
+            "name": "Unity",
+            "expression": "[2021.1.2f1,2021.2.0a1]",
+            "define": "ROSLYN_ANALYZER_FIX"
+        },
+        {
+            "name": "Unity",
+            "expression": "[2020.3.6f1,2021.0]",
+            "define": "ROSLYN_ANALYZER_FIX"
         }
     ],
     "noEngineReferences": false
