com.unity.ide.rider@3.0.13 ## [3.0.13] - 2022-03-17
 - fix RIDER-69927 "Test not run" status is shown for the test suite when running unit tests for Unity project
 - fix RIDER-74676 Unity plugin "JetBrainseRider Editor" completely breaks <= 2019.1.9
 - fix RIDER-71503 Unity Hang on "Domain Unload", caused by dispose of FileSystemWatcher

--- a/Rider/Editor/com.unity.ide.rider.asmdef
+++ b/Rider/Editor/com.unity.ide.rider.asmdef
@@ -15,7 +15,9 @@
         "nunit.framework.dll"
     ],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_2019_2_OR_NEWER"
+    ],
     "versionDefines": [
         {
             "name": "com.unity.test-framework",
