--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "com.unity.ide.rider",
   "displayName": "JetBrains Rider Editor",
   "description": "The JetBrains Rider Editor package provides an integration for using the JetBrains Rider IDE as a code editor for Unity. It adds support for generating .csproj files for code completion and auto-discovery of installations.",
-  "version": "3.0.18",
+  "version": "3.0.20",
   "unity": "2019.2",
   "unityRelease": "6f1",
   "dependencies": {
     "com.unity.ext.nunit": "1.0.6"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "3.0.18"
+    "com.unity.ide.rider.tests": "3.0.20"
   },
   "_upm": {
-    "changelog": "- fixes RIDER-74818 Unity doesn't get to play mode if Editor is not running and user starts debug or profiling\r\n- Improve performance of project generation - avoid using Directory.Exists\r\n- avoid doing ProjectGeneration twice on the first start-up"
+    "changelog": "- fix loading Rider integration EditorPlugin on first switch of External Editor to Rider, see [RIDER-91185](https://youtrack.jetbrains.com/issue/RIDER-91185)"
   },
   "upmCi": {
-    "footprint": "31a8020715d94d80e3fb34a730cb70a177948af4"
+    "footprint": "a31cc1e4dd47a76c5ece54e4eb734f778fb7c046"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.ide.rider@3.0/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
     "type": "git",
-    "revision": "b40b39e6834c2915637f431d002d1f3dd8ec9ce5"
+    "revision": "b0b5d281f6e3a1b7e7c73939f5ed03dc0668bcc1"
   }
 }
