--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "com.unity.ide.rider",
   "displayName": "JetBrains Rider Editor",
   "description": "The JetBrains Rider Editor package provides an integration for using the JetBrains Rider IDE as a code editor for Unity. It adds support for generating .csproj files for code completion and auto-discovery of installations.",
-  "version": "3.0.34",
+  "version": "3.0.35",
   "unity": "2019.4",
   "unityRelease": "6f1",
   "dependencies": {
     "com.unity.ext.nunit": "1.0.6"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "3.0.28"
+    "com.unity.ide.rider.tests": "3.0.35"
   },
   "_upm": {
-    "changelog": "- Bump Unity minimum supported version"
+    "changelog": "- fix RIDER-120306 RootNamespace is not generated for a csproj without cs files\n- fix RIDER-121881 GetAllRiderPaths failed\n- fix RIDER-122372 RiderPathLocator issue (found Rider installations duplicates on Linux)\n- fix RIDER-122527 Open log in the Rider tab in Unity Editor doesn't work"
   },
   "upmCi": {
-    "footprint": "b9e27e5d4dd2c1756344a2126e355ace3b617659"
+    "footprint": "1fb1fce5117eeeb61afa290b9b59fbdf5cd656a0"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.ide.rider@3.0/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
     "type": "git",
-    "revision": "700eb86ebc7b9f72d760e2e1c740fc5e2fd6a54b"
+    "revision": "52cd6800886cb6c849f5c908665829f1f8cca705"
   }
 }
