--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,6 @@ root = true
 indent_style = space
 indent_size = 2
 end_of_line = lf
+
+[*.cs]
+dotnet_analyzer_diagnostic.severity = none # https://github.com/JetBrains/resharper-unity/issues/2481
