--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "name": "com.unity.ide.rider",
   "displayName": "JetBrains Rider Editor",
   "description": "The JetBrains Rider Editor package provides an integration for using the JetBrains Rider IDE as a code editor for Unity. It adds support for generating .csproj files for code completion and auto-discovery of installations.",
-  "version": "3.0.36",
-  "unity": "2019.4",
-  "unityRelease": "6f1",
+  "version": "3.0.37",
+  "unity": "2021.3",
   "dependencies": {
     "com.unity.ext.nunit": "1.0.6"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "3.0.36"
+    "com.unity.ide.rider.tests": "3.0.37"
   },
   "_upm": {
-    "changelog": "- fix RIDER-124592 Avoid affecting \"Strip Engine Code\" while IL2CPP debug enabled"
+    "changelog": "- Automatic update generated projects, when Roslyn AdditionalFiles are changed\n- Remove .editorconfig from distributed package to not prevent hiding warnings with a top user .editorconfig"
   },
   "upmCi": {
-    "footprint": "0f5f7817a54759523be87e8d6b6c95abc8e313d3"
+    "footprint": "0afa51a46af643d865d2d74769bf545be8b65a2d"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.ide.rider@3.0/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
     "type": "git",
-    "revision": "b5315083ab3861d21f6ab2ed0d9514daf04bf208"
+    "revision": "39f00cc44029286564f951484a56b488a35df36d"
   }
 }
