com.unity.ide.rider@3.0.38 ## [3.0.38] - 2025-09-15
- fix a regression, introduced in 3.0.37. New files are not added in the project.

--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "com.unity.ide.rider",
   "displayName": "JetBrains Rider Editor",
   "description": "The JetBrains Rider Editor package provides an integration for using the JetBrains Rider IDE as a code editor for Unity. It adds support for generating .csproj files for code completion and auto-discovery of installations.",
-  "version": "3.0.37",
+  "version": "3.0.38",
   "unity": "2021.3",
   "dependencies": {
     "com.unity.ext.nunit": "1.0.6"
   },
   "relatedPackages": {
-    "com.unity.ide.rider.tests": "3.0.37"
+    "com.unity.ide.rider.tests": "3.0.38"
   },
   "_upm": {
-    "changelog": "- Automatic update generated projects, when Roslyn AdditionalFiles are changed\n- Remove .editorconfig from distributed package to not prevent hiding warnings with a top user .editorconfig"
+    "changelog": "- fix a regression, introduced in 3.0.37. New files are not added in the project."
   },
   "upmCi": {
-    "footprint": "0afa51a46af643d865d2d74769bf545be8b65a2d"
+    "footprint": "f1eaa7eeb24d71f6c00edc2cb3a1c0ef5e4e3b41"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.ide.rider@3.0/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/com.unity.ide.rider.git",
     "type": "git",
-    "revision": "39f00cc44029286564f951484a56b488a35df36d"
+    "revision": "8a49d81ce92f334a07e3b71a8847b2f60dc12287"
   }
 }
